--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	<!-- <script src="https://www.google.com/recaptcha/api.js?render={RECAPTCHA_RENDER_QUERY}"></script> -->
 
     <link rel="manifest" href="manifest.json" />
-    <title>Louisville Jazz Initiative</title>
+    <title>Collage Demo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
